--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2006,6 +2006,17 @@ p {
   color: #ffde57;
 }
 
+.domain-collaborator-title {
+  color: #c0c0c0;
+}
+
+.platinum-title + .wrapper .itemRight {
+  background-image: url('balaenaquant.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .wrapper {
   margin-top: 2rem;
   width: 90%;
@@ -2023,6 +2034,14 @@ p {
     rgba(0, 0, 0, 0)
   );
 }
+
+.wrapper .itemRight img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
 
 @keyframes scrollLeft {
   to {
