--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,10 @@ img {
   padding: 2rem 0 4rem;
 }
 
+.fs-1 {
+  font-family:'Codec Pro', sans-serif;
+}
+
 /* predefined font size for section title */
 .section_title {
   font-size: var(--big-font-size);
@@ -1632,6 +1636,13 @@ span.text {
   padding-bottom: 10rem;
   overflow: hidden;
   padding-top: 7rem;
+  height: 120vh;
+  background: linear-gradient(to bottom, 
+  rgba(0, 0, 0, 0) 50%, /* Transparent until 30% */
+  rgba(24, 41, 85, 0.8) 60%, /* Midpoint */
+  #4761A7 100% /* Full color at the bottom */
+  );
+  padding-bottom: 100px;
 }
 
 /* Judges Wrapper */
@@ -1641,7 +1652,7 @@ span.text {
   flex-wrap: wrap; /* Allows wrapping on smaller screens */
   gap: 30px;
   position: relative;
-  z-index: 2;
+  /* z-index: ; */
 }
 
 /* Individual Judge Card */
@@ -1707,14 +1718,59 @@ p {
   margin: 0 auto;
 }
 
-/* Background Blur Effect */
+.star{
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  margin-top: 30px;
+  width: 8rem;
+  color: white;
+  z-index: 2;
+  transform: translate(-50%, -20%);
+}
+
 .design-background {
   position: absolute;
-  top: 70%;
+  top: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 50%;
   z-index: 1;
+}
+
+.coming-soon-container {
+  position:relative;
+  display: flex;
+  margin-top: 120px;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  z-index: 5;
+}
+
+.coming-soon-text {
+  font-size: 35px;
+  color: white;
+  font-family:'Codec Pro', sans-serif;
+  font-weight: bold;
+  margin-top: 5rem;
+  z-index: 5;
+}
+
+.divider {
+  width: 80%;
+  border: 3px solid white;
+  margin: 10px 0;
+  opacity: 1;
+  z-index: 5;
+}
+
+.description {
+  font-size: 23px;
+  margin-top: 20px;
+  opacity: 1;
+  max-width: 100%;
+  z-index: 5;
 }
 
 /*=============== MENTOR SECTION ===============*/
