Add grab sponsor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2059,7 +2059,7 @@ p {
 .itemRight {
   width: 200px;
   height: 100px;
-  background-color: #475c9a; 
+  background-color: #FFFFFF; 
   border-radius: 6px;
   position: absolute;
   animation-timing-function: linear;
