--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1343,54 +1343,39 @@ span.text {
   transform: translateX(100%);
 }
 
+.connected_beads {  /* Separate beads and dotted line to align them center */
+  display: flex;
+  align-self: center;
+  margin: auto auto auto 0;
+  width: calc(10% + 0.5rem);
+}
+
+.line_section:nth-child(odd) .connected_beads{
+  margin: auto 0 auto auto;
+}
+
 .bead {
-  position: absolute;
-  display: block;
   height: 1rem;
-  width: 1rem;
+  width: 1.6rem;
   border-radius: 50%;
   background-color: #fff;
   box-shadow: 0 0 10px #fff;
-  transform: translateX(-50%);
-}
-
-.bead_end {
-  left: 50%;
-  top: 20%;
-}
-
-.bead_start {
-  left: calc(40% + 1rem);
-  top: 20%;
-}
-
-.line_section:nth-child(odd) .bead_start {
-  left: calc(60% - 1rem);
+  /* transform: translateX(-50%); */
 }
 
 .dotted_line {
-  position: absolute;
+  display: flex;
   border: none;
   border-top: 5px dotted #fff;
   background: transparent;
-
+  margin: auto;
   height: 0;
-  width: calc(10% - 1rem);
-  top: -25%;
-  right: 50%;
-}
-
-.content1 .dotted_line {
-  top: calc(-25% + 1rem);
-}
-
-.line_section:nth-child(odd) .dotted_line {
-  left: 50%;
+  width: 100%;
 }
 
 .content {
   /* transform: translateY(-80%); */
-  width: calc(50%-2rem);
+  width: 40%;
   word-wrap: break-word;
   text-align: center;
   display: flex;
@@ -1502,12 +1487,6 @@ span.text {
   .line_section h2{
     font-size: 1.5rem;
   }
-  .dotted_line {
-    top: calc(-25% - 0.25rem);
-  }
-  .content1 .dotted_line {
-    top: calc(-25% + 0.5rem);
-  }
   /* count down sector */
   .count_down {
     display: grid;
@@ -1517,7 +1496,7 @@ span.text {
 /* responsive page for timeline for small screen */
 @media screen and (max-width: 600px) {
   .content {
-    width: 10rem;
+    width: calc(40% - 0.1rem);
   }
   .content p {
     width: 75%;
@@ -1529,15 +1508,7 @@ span.text {
   .line_section h2{
     font-size: 0.8rem;
   }
-  .dotted_line {
-    top: calc(-25% - 0.75rem);
-  }
-  .content1 .dotted_line {
-    top: calc(-25% + 0.25rem);
-  }
-  .content2 .dotted_line, .content4 .dotted_line, .content5 .dotted_line, .content6 .dotted_line, .content9 .dotted_line, .content10 .dotted_line {
-    top: calc(-25%);
-  }
+  
   /* count down sector */
   .count_down {
     display: flex;
@@ -2187,7 +2158,7 @@ footer {
   margin-right: 60px;
   font-family: "Poppins";
 }
-hr {
+.footer_hr {
   border: none;
   background-color: white;
   margin-bottom: -10px;
