--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2419,7 +2419,7 @@ a.contact-link:hover {
 .login-form-background {
   position: absolute;
   opacity: 0.7;
-  top: calc(30% - 0.15rem);
+  transform: translate(0%, -10%);
   z-index: 0;
 }
 
