--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2825,11 +2825,11 @@ a.contact-link:hover {
   width: 80%;
 }
 
-#submit-groupname-input:focus, #submit-groupname-input:active {
+/* #submit-groupname-input:focus, #submit-groupname-input:active {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
   transition: border-bottom-right-radius border-bottom-left-radius 0.2s ease;
-}
+} */
 
 #submit-groupname-input:not(:focus):not(:active) {
   transition: border-bottom-right-radius 0.2s ease 0.2s, border-bottom-left-radius 0.2s ease 0.2s;
