--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2748,7 +2748,7 @@ a.contact-link:hover {
 }
 
 .textpara {
-
+  text-align: center;
   align-self: center;
 }
 
@@ -2933,6 +2933,27 @@ a.contact-link:hover {
 .input-box {
   position: relative; /* Required for absolute positioning of child elements */
   width: 100%; /* Ensure the container spans the full width */
+}
+
+
+
+.submitted {
+  align-content: center;
+  justify-items: center;
+  border-radius: 3rem;
+  background-color: #00cc7433 ;
+  backdrop-filter: blur(10px);
+  width: 50%;
+  height: 50%;
+  margin-top: 0.75rem;
+}
+
+.z-idx-0 {
+  z-index: 0;
+}
+
+.z-idx-1 {
+  z-index: 1;
 }
 
 /*===================================== MENTOR PAGE =====================================*/
